--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,8 @@
     "@types/webpack": "^4.4.0",
     "@types/webpack-env": "^1.13.6",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.0.1",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-emotion": "^9.2.0",
     "core-js": "^2.5.7",
     "cross-env": "^5.1.6",
