--- a/client/config/jest/tsconfig.json
+++ b/client/config/jest/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "../tsconfig/tsconfig.test.json",
+  "compilerOptions": {
+    "types": ["node", "jest"]
+  },
   "include": [
     "**/*"
   ]
