--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "description": "Client part for my blog",
   "main": "index.js",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0-beta.51",
     "babel-loader": "^8.0.0-beta.3",
     "emotion": "^9.2.3",
     "mobx": "^5.0.2",
