--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,10 @@
     "@babel/plugin-transform-react-display-name": "^7.0.0-beta.49",
     "@babel/plugin-transform-react-jsx": "^7.0.0-beta.49",
     "@babel/preset-env": "^7.0.0-beta.49",
+    "@storybook/addon-actions": "^4.0.0-alpha.11",
+    "@storybook/addon-knobs": "^4.0.0-alpha.11",
+    "@storybook/addons": "^4.0.0-alpha.11",
+    "@storybook/react": "^4.0.0-alpha.11",
     "@types/dotenv": "^4.0.3",
     "@types/html-webpack-plugin": "^2.30.3",
     "@types/jest": "^23.0.2",
@@ -29,6 +33,9 @@
     "@types/react-dom": "^16.0.6",
     "@types/react-hot-loader": "^4.1.0",
     "@types/react-is": "^16.3.0",
+    "@types/storybook__addon-actions": "^3.0.3",
+    "@types/storybook__addon-knobs": "^3.3.1",
+    "@types/storybook__react": "^3.0.7",
     "@types/webpack": "^4.4.0",
     "@types/webpack-env": "^1.13.6",
     "babel-core": "^7.0.0-bridge.0",
@@ -43,6 +50,8 @@
     "jest": "^23.1.0",
     "jest-emotion": "^9.2.2",
     "local-web-server": "^2.5.2",
+    "moment": "^2.22.2",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "react-testing-library": "^3.1.6",
@@ -58,6 +67,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "scripts": {
+    "sb": "cross-env STORYBOOK_GIT_ORIGIN=\"Ailrun\" TS_NODE_PROJECT=\"./config/storybook/tsconfig.json\" start-storybook -c ./config/storybook -p 9001",
     "serve": "ts-node --project script/tsconfig.json script/serve",
     "build": "cross-env TS_NODE_PROJECT=\"./config/webpack/tsconfig.json\" webpack --mode production --config ./config/webpack/webpack.config.ts",
     "lint:src": "tslint -p ./config/tsconfig/tsconfig.dev.json -c ./config/tslint/tslint.dev.js -t codeFrame",
