--- a/client/package.json
+++ b/client/package.json
@@ -4,67 +4,57 @@
   "description": "Client part for my blog",
   "main": "index.js",
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.51",
-    "babel-loader": "^8.0.0-beta.3",
-    "emotion": "^9.2.3",
-    "mobx": "^5.0.2",
-    "mobx-react": "^5.2.3",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
-    "react-emotion": "^9.2.3",
-    "react-hot-loader": "^4.3.1",
-    "react-is": "^16.4.0"
+    "@babel/polyfill": "^7.0.0",
+    "@emotion/core": "^10.0.0-beta.6",
+    "@emotion/styled": "^10.0.0-beta.6",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-emotion": "^10.0.0-beta.6",
+    "cross-env": "^5.2.0",
+    "jest-emotion": "^10.0.0-beta.6",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-hot-loader": "^4.3.11",
+    "react-is": "^16.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.49",
-    "@babel/plugin-syntax-jsx": "^7.0.0-beta.49",
-    "@babel/plugin-transform-react-display-name": "^7.0.0-beta.49",
-    "@babel/plugin-transform-react-jsx": "^7.0.0-beta.49",
-    "@babel/preset-env": "^7.0.0-beta.49",
-    "@storybook/addon-actions": "^4.0.0-alpha.11",
-    "@storybook/addon-knobs": "^4.0.0-alpha.11",
-    "@storybook/addons": "^4.0.0-alpha.11",
-    "@storybook/react": "^4.0.0-alpha.11",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-syntax-jsx": "^7.0.0",
+    "@babel/plugin-transform-react-display-name": "^7.0.0",
+    "@babel/plugin-transform-react-jsx": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
     "@types/dotenv": "^4.0.3",
-    "@types/html-webpack-plugin": "^2.30.3",
-    "@types/jest": "^23.0.2",
-    "@types/node": "^10.3.2",
-    "@types/react": "^16.3.17",
-    "@types/react-dom": "^16.0.6",
+    "@types/html-webpack-plugin": "^3.2.0",
+    "@types/jest": "^23.3.9",
+    "@types/node": "^10.12.1",
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
     "@types/react-hot-loader": "^4.1.0",
-    "@types/react-is": "^16.3.0",
-    "@types/storybook__addon-actions": "^3.0.3",
-    "@types/storybook__addon-knobs": "^3.3.1",
-    "@types/storybook__react": "^3.0.7",
-    "@types/webpack": "^4.4.0",
+    "@types/react-is": "^16.5.0",
+    "@types/webpack": "^4.4.17",
+    "@types/webpack-dev-server": "^3.1.1",
     "@types/webpack-env": "^1.13.6",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.0.1",
-    "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-emotion": "^9.2.0",
+    "babel-jest": "^23.6.0",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
     "core-js": "^2.5.7",
-    "cross-env": "^5.1.6",
-    "dotenv": "^6.0.0",
+    "dotenv": "^6.1.0",
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
-    "jest": "^23.1.0",
-    "jest-emotion": "^9.2.2",
-    "local-web-server": "^2.5.2",
-    "moment": "^2.22.2",
-    "progress-bar-webpack-plugin": "^1.11.0",
+    "jest": "^23.6.0",
+    "local-web-server": "^2.6.0",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
-    "react-testing-library": "^3.1.6",
-    "ts-jest": "github:joaovieira/ts-jest#babel-peerDependency-release",
-    "ts-loader": "^4.4.1",
-    "ts-node": "^6.1.1",
-    "tslint": "^5.10.0",
-    "tslint-eslint-rules": "^5.3.1",
+    "react-testing-library": "^5.2.3",
+    "ts-jest": "^23.10.4",
+    "ts-loader": "^5.3.0",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^2.9.1",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.3",
-    "webpack-dev-server": "^3.1.4"
+    "typescript": "^3.1.4",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "scripts": {
     "sb": "cross-env STORYBOOK_GIT_ORIGIN=\"Ailrun\" TS_NODE_PROJECT=\"./config/storybook/tsconfig.json\" start-storybook -c ./config/storybook -p 9001",
