--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "@proto-b/client-ts",
   "version": "0.0.0",
   "description": "Client part for my blog",
   "main": "index.js",
@@ -41,7 +41,7 @@
     "html-webpack-plugin": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.6.0",
-    "local-web-server": "^2.6.0",
+    "local-web-server": "^2.5.2",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "react-testing-library": "^5.2.3",
