--- a/.codecov.yml
+++ b/.codecov.yml
@@ -7,6 +7,8 @@ coverage:
       default: off
       client-ts:
         flags: client-ts
+      client-reasonml:
+        flags: client-reasonml
       server:
         flags: server
 
